--- a/webhook-demo/Dockerfile
+++ b/webhook-demo/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 # Install Flask
 COPY requirements.txt /app/
-RUN pip install --no-cache-dir requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the webhook server script
 COPY server.py /app/
