--- a/k8s-psa-lab/manifests/03-restricted/deployment-payment.yaml
+++ b/k8s-psa-lab/manifests/03-restricted/deployment-payment.yaml
@@ -66,7 +66,7 @@ spec:
       containers:
         - name: payment-api
           # En production: utiliser un registre privé avec digest
-          image: nginx:1.25-alpine  # Remplacer par votre image applicative
+          image: nginxinc/nginx-unprivileged:1.25-alpine  # Remplacer par votre image applicative
           imagePullPolicy: Always
 
           ports:
